--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
-author_profile: true
+layout: splash
+title: "Sabira El Khalfaoui"
 ---
+
+# 👋 Welcome
+
+I’m a cryptographer and researcher with a passion for secure systems and academic clarity.
+
+🔒 Cryptography | 🧮 Error-Correcting Codes | 🛠 Developer Portfolio
